fix blog and story font spacing

--- a/assets/scss/layout/_index-3.scss
+++ b/assets/scss/layout/_index-3.scss
@@ -1,5 +1,4 @@
 .bg-image {
-
   background-image: url("../images/img_diy_bg.png"); /* 背景圖片*/
   width: 100%;
   height: 600px;
@@ -7,15 +6,14 @@
   overflow: hidden;
 }
 
-
 .bg-image-mobile {
   background-image: url("../images/img_diy_bg.png"); /* 手機板背景圖片*/
-  width: 95%;
+  // width: 95%;
   height: 903px;
   border-radius: 80px 0px 80px 0px;
   overflow: hidden;
   background-position: center;
-  margin-left: 10px;
+  // margin-left: 10px;
 }
 
 .bg-image2 {
@@ -35,90 +33,36 @@
   background-size: cover;
 }
 
+.bg-image2-mobile {
+  background-image: url("../images/img-scrollView-m.png"); /* 手機板背景圖片*/
+  max-width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  /* 可依需求調整高度 */
+}
 
-  .bg-image2-mobile {
-    background-image: url('../images/img-scrollView-m.png');  /* 手機板背景圖片*/
-    max-width: 100%;  
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-     /* 可依需求調整高度 */
-  }
-
-
-#base-image {
+.base-image {
   position: absolute;
   top: 120px;
   left: 450px;
 }
-#dynamic-image {
+.dynamic-image {
   position: absolute;
   width: 48px;
   height: 48px;
   display: none;
 }
 
-#diy-left-image {
+.bg-image2-mobile {
   position: absolute;
   top: 0px;
   left: 0px;
 }
-#diy-left-dynamic-image {
+.diy-left-dynamic-image {
   position: absolute;
   width: 48px;
   height: 48px;
   display: none;
 }
-
-.bgCustomblog {
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.text-indent {
-  text-indent: 2em;
-}
-
-.content {
-  display: none;
-}
-
-.content.active {
-  display: block;
-}
-
-.tab-button.active {
-  background-color: #ddd;
-}
-
-.accordion-item.no-border {
-  border-top: none !important;
-  border-left: none !important;
-  border-right: none !important;
-}
-
-
-
-.imageContainer {
-
-}
-
-.imageOverlay {
-  background-color: rgba(0, 0, 0, 0.6);
-  top: 0;
-  left: 0;
-  opacity: 0;
-  transition: opacity 0.5s ease;
-}
-
-.imageContainer:hover .imageOverlay {
-  opacity: 1;
-}
-
-.text-with-bg {
-  display: inline-block;
-  background-color: rgba(128, 128, 128, 0.5); /* 灰色背景，50% 透明度 */
-  padding: 10px; /* 內部邊距，讓背景更顯著 */
-}
-
